tests/valid/string.d.ts
export declare function rgbString(): void;
export declare function rgbaString(): void;
