tests/invalid/object.d.ts
export declare function invalidObjectValue(): void;
